--- a/static/html/index.html
+++ b/static/html/index.html
@@ -7,7 +7,7 @@
     <title>Car Renderer</title>
 </head>
 <body>
-    <h1>汽车线稿上色器</h1>
+    <h1>汽车设计线稿智能上色系统</h1>
     <form action="/test" enctype='multipart/form-data' method='POST'>
         <input type="file" name="file">
         <input type="submit" value="上传">
